<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intercepter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello Intercepter!</string>
    <string name="add_new">New</string>
    <string name="add_new_blacklist">Add new</string>
    <string name="add_new_whitelist">Add new</string>
    <string name="phone">Phone</string>
    <string name="SMS">SMS</string>
    <string name="makesure">OK</string>
    <string name="delete">-</string>
    <string name="delete_number">delete</string>
    <string name="info">INFO</string>
    <string name="calllog">Call Log</string>
    <string name="username">User Name</string>
	<string name="smslog">SMS Log</string>
	<string name="manaul">Manaul</string>
	<string name="edittext_number">edittext_number</string>
	<string name="number_hint">Input Number</string>
	<string name="comment_hint">Input Comment</string>
    <string-array name="str_list_source">
        <item>Address Book</item>
        <item>Call records</item>
        <item>SMS records</item>
        <item>Manual</item>
    </string-array>

</resources>