<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="#000"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <CheckBox
        android:id="@+id/checkbox_SMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMS" />

    <Button
        android:id="@+id/btn_delete_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_number" />
    
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makesure" />
</LinearLayout>
