<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edittext_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edittext_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makesure" />

</LinearLayout>